--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,11 @@
 
 # misc
 .DS_Store
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.local.test
+.env.local.development
+.env.local.production
 
 npm-debug.log*
 yarn-debug.log*
